--- a/dhanvina-portfolio-export/index.html
+++ b/dhanvina-portfolio-export/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Dhanvina - AI Engineer Portfolio" />
+    <meta name="author" content="Dhanvina" />
+    <meta name="keywords" content="AI, Machine Learning, Deep Learning, Portfolio" />
     <title>Dhanvina Portfolio</title>
+    <style>
+      /* Remove GitHub Pages template styles */
+      .github-pages-footer, 
+      .github-corner {
+        display: none !important;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
